--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,3 +57,9 @@ button {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
+
+.footer {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
